# signal

./: .gitignore  LICENSE  README.md
app/: README.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 0001_initial.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs  postgres.rs
backend/src/domain/: mod.rs
backend/src/middleware/: auth.rs
backend/src/routes/: devices.rs  events.rs  health.rs  mod.rs  push_tokens.rs  users.rs
backend/src/services/: events.rs  mod.rs  notifications.rs
backend/tests/: events_service.rs
button/: README.md
docs/architecture/: ARCHITECTURE.md
receiver/: README.md
